@@ -23,6 +23,7 @@ Preference Tool
 Ram Cache
 Rule Tool
 SQL Cache
+Session Tool
 Simulation Movement
 Simulation Tool
 System Preference
