@@ -1,4 +1,5 @@
 mimetypes_registry
 portal_contribution_registry
 portal_notifications
+portal_sessions
 portal_transforms
