@@ -1,3 +1,6 @@
+2008-11-13 ivan
+* Move portal_sessions from erp5_commerce
+
 2008/11/13 yusei
 * Start to develop version 5.4.
 
